build_check_2.txt
    Checking hardware_monitor v0.1.0 (C:\Users\will\thenozzle\hardware_monitor)
error[E0432]: unresolved imports `windows_sys::Win32::System::Performance::PDH_HCOUNTER`, `windows_sys::Win32::System::Performance::PDH_HQUERY`
 --> src\main.rs:9:43
  |
9 |     PDH_FMT_COUNTERVALUE, PDH_FMT_DOUBLE, PDH_HCOUNTER, PDH_HQUERY,
  |                                           ^^^^^^^^^^^^  ^^^^^^^^^^ no `PDH_HQUERY` in `Win32::System::Performance`
  |                                           |
  |                                           no `PDH_HCOUNTER` in `Win32::System::Performance`
  |                                           help: a similar name exists in the module: `PDH_NO_COUNTERS`

warning: unused imports: `PdhAddCounterW`, `PdhCollectQueryData`, `PdhGetFormattedCounterValue`, and `PdhOpenQueryW`
 --> src\main.rs:8:18
  |
8 |     self as pdh, PdhAddCounterW, PdhCollectQueryData, PdhGetFormattedCounterValue, PdhOpenQueryW,
  |                  ^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0432`.
warning: `hardware_monitor` (bin "hardware_monitor") generated 1 warning
error: could not compile `hardware_monitor` (bin "hardware_monitor") due to 1 previous error; 1 warning emitted
